--- a/Index.html
+++ b/Index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi primer Proyecto web</title>
+    <title>mi primer proyecto web</title>
 </head>
-
 <body>
-<h1>Hola Mundo</h1>
+<h1>Hola mundo</h1>
 </body>
 </html>
